--- a/index.html
+++ b/index.html
@@ -33,6 +33,13 @@
     .text {
       text-align: center !important;
     }
+    #tbl{
+      color: white;
+    } 
+    #tr1{
+      color: black;
+    }
+    
   </style>
 </head>
 
@@ -83,7 +90,7 @@
 
     <table class="table mt-4 ">
       <thead id="tbl" class="text">
-        <tr>
+        <tr id="tr1">
           <th scope="col">Name</th>
           <th scope="col">class</th>
           <th scope="col">Roll #</th>
@@ -91,12 +98,24 @@
         </tr>
       </thead>
       <tbody>
-        <tr>
+        <tr  >
 
           <td> <input type="text" placeholder="Name" id="name"></td>
-          <td> <input type="text" placeholder="Class" id="class"></td>
-          <td> <input type="text" placeholder="Roll" id="roll"></td>
-          <td class="text"> <i class="fa fa-plus-square text" onclick="add()"
+          <td> <select id="class" name="class">
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5</option>
+            <option value="6">6</option>
+            <option value="7">7</option>
+            <option value="8">8</option>
+            <option value="9">9</option>
+            <option value="10">10</option>
+          </select>
+        </td>
+          <td> <input type="text" placeholder="Roll" id="roll" ></td>
+          <td class="text"> <i class="fa fa-plus-square text" onclick="add()" 
               style="font-size:36px; color:#198754 "></i> </td>
 
         </tr>
